# GraspGenX

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
assets/proc_grippers/parallel_2f_v1_1002/: config.json  gripper.urdf  gripper_spherical_dof.urdf
assets/proc_grippers/parallel_2f_v1_1008/: config.json  gripper.urdf  gripper_spherical_dof.urdf
assets/proc_grippers/parallel_2f_v1_1011/: config.json  gripper.urdf  gripper_spherical_dof.urdf
assets/proc_grippers/parallel_2f_v1_1012/: config.json  gripper.urdf  gripper_spherical_dof.urdf
assets/proc_grippers/parallel_2f_v1_1014/: config.json  gripper.urdf  gripper_spherical_dof.urdf
assets/proc_grippers/parallel_2f_v1_1018/: config.json  gripper.urdf  gripper_spherical_dof.urdf
assets/proc_grippers/parallel_2f_v1_1025/: config.json  gripper.urdf  gripper_spherical_dof.urdf
assets/proc_grippers/parallel_2f_v1_1028/: config.json  gripper.urdf  gripper_spherical_dof.urdf
assets/proc_grippers/parallel_2f_v2_1001/: config.json  gripper.urdf  gripper_spherical_dof.urdf
assets/proc_grippers/parallel_2f_v2_1004/: config.json  gripper.urdf  gripper_spherical_dof.urdf
assets/proc_grippers/parallel_2f_v2_1010/: config.json  gripper.urdf  gripper_spherical_dof.urdf
assets/proc_grippers/revolute_2f_v1_1001/: config.json  gripper.urdf  (+1 more)
client-server/: README.md  graspgenx_client.py  graspgenx_server.py
docker/: Dockerfile  build.sh
end2end/: .gitignore  README.md  build_ur10e_gripper.py  clutter_task.py  curobo_compat.py  dynamic_playback.py  e2e_grasp_demo.py  export_trajectory_usd.py  paths.py  registry.py  render_trajectory_mp4.py  robot_profiles.py  scene_builder.py  setup_end2end_deps.py  tasks.py  trajectory_visualizer.py  ur10e_arm_template.yml  visualize_collision_vs_visual.py  visualize_scene_grasps.py
end2end/envs/: franka_clutter3_demo.yaml  single_bin_demo.yaml  tabletop_single_nobin.yaml
end2end/robots/: franka_panda.yaml  ur10e_arx_x5.yaml  ur10e_surge_hand.yaml
graspgenx/: __init__.py  _setup_dependencies.py  data_lite.py  grasp_server.py  metrics.py  robot.py  x_grippers.py
graspgenx/dataset/: dataset.py  dataset_utils.py  eval_utils.py  exceptions.py  image_utils.py  renderer.py  visualize_utils.py  webdataset_utils.py  xgrasp_dataset.py  xgrasp_dataset_utils.py
graspgenx/models/: discriminator.py  generator.py  grasp_gen.py  model_utils.py
graspgenx/samplers/: __init__.py  graspmoe.py  planner.py
graspgenx/serving/: __init__.py  zmq_client.py  zmq_server.py
graspgenx/utils/: checkpoint_io.py  collision_filter.py  compute_utils.py  logging_config.py  point_cloud.py  scene_loaders.py  so3.py  training.py  transformations.py  viser_utils.py
scripts/: config_xgrasp.yaml  demo_object_mesh.py  demo_object_pc.py  demo_scene_pc.py  gripper_config_wizard.py  inference_xgrasp.py  inspect_eval_h5.py  list_grippers.py  train_xgrasp.py  vis_gripper_desc.py
tests/: conftest.py  test_backbone_compare.py  test_backbone_compare_real.py  test_compute_utils.py  test_dataset_format.py  test_end2end_demos.py  test_exceptions.py  test_grasp_server.py  test_graspmoe.py  test_inference_installation.py  test_inference_perf.py  test_installation.py  test_logging.py  test_point_cloud_utils.py  test_ptv3_vanilla.py  test_robot.py  test_webdataset_utils.py  test_zmq_serving.py
(+67 files in other folders)
