[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graspgenx"
version = "1.0.0"
description = "GraspGenX: Cross-Embodiment Diffusion-based 6-DOF Grasp Generation"
authors = [
    {name = "Adithya Murali", email = "admurali@nvidia.com"},
]
maintainers = [
    {name = "Adithya Murali", email = "admurali@nvidia.com"},
]
license = {text = "NVIDIA Corporation"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["robotics", "manipulation", "learning", "computer-vision", "grasping", "cross-embodiment"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Inference-only dependency set. The training / data-generation / serving /
# end-to-end pipelines (and their heavy deps: webdataset, tensorboard, pyrender,
# scene-synthesizer, hydra, transformers, torch-geometric, ...) have been removed
# from this fork — see the slim/inference history. All pins are FLOORS: verified
# end-to-end on torch 2.1 → 2.12, numpy 1.26 → 2.4, diffusers 0.11 → 0.38, so the
# package co-installs cleanly with downstream projects instead of forcing
# conflicting exact versions. The release checkpoint uses the pure-PyTorch
# PTv3-vanilla backbone, so no PointNet++ CUDA extension build is required.
dependencies = [
    # Core ML
    "torch>=2.1",
    "torchvision>=0.16",
    "numpy>=1.24",
    "scipy",
    "scikit-learn",
    "diffusers>=0.11",
    "timm>=1.0",
    "tensordict",
    "addict",
    "huggingface-hub>=0.25",
    "omegaconf",        # model-config loading (utils/checkpoint_io); was pulled via hydra-core
    # Geometry / robot / IO
    "trimesh>=4.0",
    "yourdfpy>=0.0.56",
    "h5py",
    "imageio",
    "pyyaml",
    "tqdm",
]

[project.urls]
"Homepage" = "https://graspgenx.github.io"
"Repository" = "https://github.com/Kashu7100/GraspGenX"
"Upstream" = "https://github.com/NVlabs/GraspGenX"
"Documentation" = "https://graspgenx.github.io"

[project.optional-dependencies]
# Interactive grasp/point-cloud visualization (graspgenx.utils.viser_utils, demo
# scripts). NOT needed for headless inference via the Python API.
vis = ["viser"]
# Mesh-vs-scene collision filtering at higher fidelity (graspgenx.utils.collision_filter
# works without it; python-fcl enables exact mesh checks).
collision = ["python-fcl"]
dev = ["black", "isort", "flake8", "pytest"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["graspgenx*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json", "*.txt", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring a live GraspGenX server or GPU",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.uv]
# Auto-detect the local NVIDIA driver and pick a matching torch wheel
# (e.g. cu126 for driver 560.x, cu130 for driver 580.x+). Avoids hardcoding
# a CUDA build that would break for users on different driver versions.
torch-backend = "auto"
